# libgwavi

./: .gitignore  CMakeLists.txt
.github/workflows/: semgrep.yml
src/: gwavi.c
